Refactor directory handling with platform-specific paths.
Centralized data directory logic through the new `Filesystem` utility to ensure consistent and platform-appropriate directory paths. Updated managers and main application class to use this utility, improving maintainability and cross-platform compatibility.